# newsletter.rs

./: Cargo.toml  Dockerfile  clippy.toml  spec.yaml  sqlx-data.json  test.sql
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230111001145_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
